fix: horizontal scrolling for body

--- a/christmas-shop/styles/global.css
+++ b/christmas-shop/styles/global.css
@@ -34,7 +34,6 @@ html {
 
 body {
   color: var(--color--dark);
-  overflow-x: hidden;
 
   background-color: var(--color--static-white);
 }
