--- a/christmas-shop/styles/header.css
+++ b/christmas-shop/styles/header.css
@@ -1,6 +1,8 @@
 @import url(global.css);
 
 header {
+  position: relative;
+  z-index: 1;
   padding: 0 8px;
   overflow: hidden;
   max-width: var(--section-width-max);
@@ -128,11 +130,12 @@ header {
 }
 
 .block_burger_menu__nav {
-  position: absolute;
-  top: 64px;
-  padding-bottom: 64px;
+  position: fixed;
+  top: 0;
   transform: translate(100%);
-  height: 100vh;
+  padding-bottom: 64px;
+  /* ? Header остается на месте, и после малого скролла если нажать на кнопку burger то будет щель. Эта высота ее и компенсирует.  */
+  height: calc(100vh + 64px);
   width: 100vw;
 
   background-color: var(--color--static-white);
@@ -144,12 +147,12 @@ header {
 
   text-align: center;
 
-  transition: transform 0.2s;
+  transition: right 0.2s, transform 0.2s;
 }
 
 @supports (height: 100dvh) {
   .block_burger_menu__nav {
-    height: 100dvh;
+    height: calc(100dvh + 64px);
   }
 }
 
